Bug #18241
rgw: the Multi-Object Delete operation of S3 API wrongly handles the "Code" response element
0%
Description
According to the AWS documentation the Code element in an error response for Multi-Object Delete should be a string with values resembling codes we usually convey as rgw_http_errors::s3_code.
Code
Status code for the result of the failed delete. .
Type: String
Values: AccessDenied, InternalError
Ancestor: Error
Actually we are dumping Code as int with HTTP response number. In RGWDeleteMultiObj_ObjStore_S3::send_partial_response we have:
s->formatter->open_object_section("Error"); err_no = -op_ret; rgw_get_errno_s3(&r, err_no); s->formatter->dump_string("Key", key.name); s->formatter->dump_string("VersionId", key.instance); s->formatter->dump_int("Code", r.http_ret); s->formatter->dump_string("Message", r.s3_code); s->formatter->close_section();
Related issues
History
#1 Updated by Radoslaw Zarzynski over 4 years ago
- Status changed from New to In Progress
- Assignee set to Radoslaw Zarzynski
#2 Updated by Chang Liu over 4 years ago
I have found whole list about S3 code/message: http://docs.aws.amazon.com/AmazonS3/latest/API/s3-api.pdf Page25. I would like to fix this bug. assign this issue to me, please.
#3 Updated by Kefu Chai over 4 years ago
#4 Updated by Yehuda Sadeh over 4 years ago
That's the PR that addresses this specific issue:
https://github.com/ceph/ceph/pull/12470
It's waiting on a test in the s3 test suite.
#5 Updated by Casey Bodley almost 2 years ago
- Status changed from In Progress to Pending Backport
- Backport set to luminous mimic nautilus
#6 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40135: luminous: rgw: the Multi-Object Delete operation of S3 API wrongly handles the "Code" response element added
#7 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40136: mimic: rgw: the Multi-Object Delete operation of S3 API wrongly handles the "Code" response element added
#8 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40137: nautilus: rgw: the Multi-Object Delete operation of S3 API wrongly handles the "Code" response element added
#9 Updated by Nathan Cutler almost 2 years ago
- Pull request ID set to 12470
#10 Updated by Nathan Cutler over 1 year ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".