rgw: dump s3_code as the Code response element in RGWDeleteMultiObj_ObjStore_S3.

Fixes: http://tracker.ceph.com/issues/18241
Signed-off-by: Radoslaw Zarzynski <rzarzynski@mirantis.com>
(cherry picked from commit 8406083fb14042cb461a3aaa84b82fd78df5168f)